--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@balldontlie/sdk": "^1.2.2",
     "@reduxjs/toolkit": "^2.8.2",
+    "@tanstack/react-query": "^5.80.10",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
